Partly fix background alpha in remote plugins.

--- a/plugins/clock/clock.desktop.in.in
+++ b/plugins/clock/clock.desktop.in.in
@@ -6,4 +6,4 @@ _Comment=What time is it?
 Icon=x-office-calendar
 X-XFCE-Module=clock
 X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
-X-XFCE-External=FALSE
+X-XFCE-External=TRUE
