Add highlight code to active panel.
Also bump version to 4.7.0 and properly install a .pc file.

--- a/configure.in.in
+++ b/configure.in.in
@@ -11,9 +11,9 @@ dnl *** Version information ***
 dnl ***************************
 m4_define([libxfce4panel_verinfo], [3:0:1])
 m4_define([xfce4_panel_version_major], [4])
-m4_define([xfce4_panel_version_minor], [5])
-m4_define([xfce4_panel_version_micro], [1])
-m4_define([xfce4_panel_version_nano],  [0]) dnl leave this empty to have no nano version
+m4_define([xfce4_panel_version_minor], [7])
+m4_define([xfce4_panel_version_micro], [0])
+m4_define([xfce4_panel_version_nano],  []) dnl leave this empty to have no nano version
 m4_define([xfce4_panel_version_build], [r@REVISION@])
 m4_define([xfce4_panel_version_tag],   [svn])
 m4_define([xfce4_panel_version], [xfce4_panel_version_major().xfce4_panel_version_minor().xfce4_panel_version_micro()ifelse(xfce4_panel_version_nano(), [], [], [.xfce4_panel_version_nano()])ifelse(xfce4_panel_version_tag(), [svn], [xfce4_panel_version_tag()-xfce4_panel_version_build()], [xfce4_panel_version_tag()])])
@@ -234,6 +234,7 @@ AC_SUBST([PLATFORM_LDFLAGS])
 AC_OUTPUT([
 Makefile
 libxfce4panel/Makefile
+libxfce4panel/libxfce4panel-1.0.pc
 panel/Makefile
 wrapper/Makefile
 plugins/Makefile
