--- a/libxfce4panel/libxfce4panel-1.0.pc.in
+++ b/libxfce4panel/libxfce4panel-1.0.pc.in
@@ -8,7 +8,7 @@ localedir=@localedir@
 
 Name: libxfce4panel
 Description: Library for the Xfce Panel
-Requires: gtk+-2.0 gmodule-2.0 glib-2.0
+Requires: gtk+-2.0 gmodule-2.0 glib-2.0 libxfce4util-1.0
 Version: @PACKAGE_VERSION@
 Libs: -L${libdir} -lxfce4panel
 Cflags: -I${includedir}/xfce4/
