--- a/configure.in.in
+++ b/configure.in.in
@@ -83,7 +83,7 @@ dnl *** Check for standard headers ***
 dnl **********************************
 AC_HEADER_STDC()
 AC_CHECK_HEADERS([stdlib.h unistd.h locale.h stdio.h errno.h time.h string.h \
-                  math.h sys/types.h sys/wait.h memory.h])
+                  math.h sys/types.h sys/wait.h memory.h signal.h])
 
 dnl ******************************
 dnl *** Check for i18n support ***
