--- a/Panel-preferences.desktop.in.in
+++ b/Panel-preferences.desktop.in.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 Version=1.0
-Exec=xfce4-panel -c
+Exec=xfce4-panel -p
 Icon=preferences-system
 Type=Application
 Categories=X-XFCE;Settings;DesktopSettings;
