Import test plugin for testing the object code.

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -1,9 +1,10 @@
 # $Id$
 
-SUBDIRS = 								\
-	clock								\
-	launcher							\
-	systray								\
-	tasklist
+SUBDIRS = \
+	clock \
+	launcher \
+	systray \
+	tasklist \
+	test
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
