Initial support for Xfconf and GtkBuilder in the panel.
Add support for Xfconf to the panel and launcher plugins. Also
switch to GtkBuilder for the various dialogs. Furthermore some
fixes and cleanups.

--- a/configure.in.in
+++ b/configure.in.in
@@ -108,6 +108,7 @@ XDT_CHECK_PACKAGE([EXO], [exo-0.3], [0.3.90])
 XDT_CHECK_PACKAGE([DBUS], [dbus-glib-1], [0.34])
 XDT_CHECK_PACKAGE([CAIRO], [cairo], [1.0.0])
 XDT_CHECK_PACKAGE([LIBWNCK], [libwnck-1.0], [2.12])
+XDT_CHECK_PACKAGE([XFCONF], [libxfconf-0], [4.5.91])
 
 dnl ***********************************
 dnl *** Check for optional packages ***
