--- a/plugins/launcher/Makefile.am
+++ b/plugins/launcher/Makefile.am
@@ -27,6 +27,7 @@ liblauncher_la_CFLAGS = \
 	$(LIBXFCE4UTIL_CFLAGS) \
 	$(LIBXFCE4UI_CFLAGS) \
 	$(EXO_CFLAGS) \
+	$(XFCONF_CFLAGS) \
 	$(LIBSTARTUP_NOTIFICATION_CFLAGS) \
 	$(PLATFORM_CFLAGS)
 
@@ -42,6 +43,7 @@ liblauncher_la_LIBADD = \
 	$(LIBXFCE4UTIL_LIBS) \
 	$(LIBXFCE4UI_LIBS) \
 	$(EXO_LIBS) \
+	$(XFCONF_LIBS) \
 	$(LIBSTARTUP_NOTIFICATION_LIBS)
 
 liblauncher_la_DEPENDENCIES = \
