Fixes in the DBus code and provider signals.
 - Improve the provider-signal enums.
 - Move the dbus-related code to a seperate file in the new
   common directory.
 - Various cleanups.

--- a/configure.in.in
+++ b/configure.in.in
@@ -234,6 +234,7 @@ AC_SUBST([PLATFORM_LDFLAGS])
 
 AC_OUTPUT([
 Makefile
+common/Makefile
 libxfce4panel/Makefile
 libxfce4panel/libxfce4panel-1.0.pc
 panel/Makefile
