Add the show desktop plugin.
Also a bunch of glade file cleanups and use xdg icons names.

--- a/configure.in.in
+++ b/configure.in.in
@@ -242,6 +242,7 @@ wrapper/Makefile
 plugins/Makefile
 plugins/clock/Makefile
 plugins/launcher/Makefile
+plugins/showdesktop/Makefile
 plugins/systray/Makefile
 plugins/tasklist/Makefile
 po/Makefile.in
