--- a/plugins/clock/clock.desktop.in.in
+++ b/plugins/clock/clock.desktop.in.in
@@ -3,7 +3,7 @@ Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
 _Name=Clock
 _Comment=What time is it?
-Icon=x-office-calendar
+Icon=office-calendar
 X-XFCE-Module=clock
 X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
 X-XFCE-External=TRUE
