--- a/plugins/separator/separator.desktop.in.in
+++ b/plugins/separator/separator.desktop.in.in
@@ -1,9 +1,9 @@
 [Xfce Panel]
 Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
-_Name=Separator or Spacing
-_Comment=Adds a space or a line between panel items
-Icon=x-office-calendar
+_Name=Separator
+_Comment=Adds a separator or space between panel items
+Icon=gtk-remove
 X-XFCE-Module=separator
 X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
-X-XFCE-External=TRUE
+X-XFCE-External=FALSE
