Drop old launcher code and the test plugin.

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -4,7 +4,6 @@ SUBDIRS = \
 	clock \
 	launcher \
 	systray \
-	tasklist \
-	test
+	tasklist
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
