--- a/plugins/launcher/Makefile.am
+++ b/plugins/launcher/Makefile.am
@@ -60,18 +60,11 @@ endif
 #
 # .desktop file
 #
-desktopdir = \
-	$(datadir)/xfce4/panel-plugins
-
-desktop_in_in_files = \
-	launcher.desktop.in.in
-
-desktop_in_files = \
-	$(desktop_in_in_files:.desktop.in.in=.desktop.in)
-
+desktopdir = $(datadir)/xfce4/panel-plugins
+desktop_in_in_files = launcher.desktop.in.in
+desktop_in_files = $(desktop_in_in_files:.desktop.in.in=.desktop.in)
 %.desktop.in: %.desktop.in.in
 	sed -e "s,\@libdir\@,$(libdir),g" < $< > $@
-
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
