--- a/plugins/showdesktop/Makefile.am
+++ b/plugins/showdesktop/Makefile.am
@@ -42,18 +42,11 @@ libshowdesktop_la_DEPENDENCIES = \
 #
 # .desktop file
 #
-desktopdir = \
-	$(datadir)/xfce4/panel-plugins
-
-desktop_in_in_files = \
-	showdesktop.desktop.in.in
-
-desktop_in_files = \
-	$(desktop_in_in_files:.desktop.in.in=.desktop.in)
-
+desktopdir = $(datadir)/xfce4/panel-plugins
+desktop_in_in_files = showdesktop.desktop.in.in
+desktop_in_files = $(desktop_in_in_files:.desktop.in.in=.desktop.in)
 %.desktop.in: %.desktop.in.in
 	sed -e "s,\@libdir\@,$(libdir),g" < $< > $@
-
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
