--- a/Makefile.am
+++ b/Makefile.am
@@ -1,10 +1,12 @@
 # $Id$
 
-SUBDIRS =								\
-	libxfce4panel							\
-	panel								\
-	wrapper								\
-	plugins
+SUBDIRS = \
+	common \
+	libxfce4panel \
+	panel \
+	plugins \
+	po \
+	wrapper
 
 distclean-local:
 	rm -rf *.spec *.cache *~
@@ -14,29 +16,26 @@ rpm: dist
 	@rm -f $(PACKAGE)-$(VERSION).tar.gz
 
 desktopdir = $(datadir)/applications
-desktop_in_in_files = 							\
-	Panel-desktop-handler.desktop.in				\
-	Panel-preferences.desktop.in.in
-desktop_in_files = $(desktop_in_in_files:.desktop.in.in=.desktop.in)
-%.desktop.in: %.desktop.in.in
-	sed -e "s,\@libexecdir\@,$(libexecdir),g" < $< > $@
+desktop_in_files = \
+	panel-desktop-handler.desktop.in \
+	panel-preferences.desktop.in
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
-EXTRA_DIST = 								\
-	$(desktop_in_in_files)						\
-	intltool-extract.in						\
-	intltool-merge.in						\
+EXTRA_DIST = \
+	$(desktop_in_files) \
+	intltool-extract.in \
+	intltool-merge.in \
 	intltool-update.in
 
-DISTCLEANFILES =							\
-	$(desktop_in_files)						\
-	$(desktop_DATA)							\
-	intltool-extract						\
-	intltool-merge							\
-	intltool-update
+DISTCLEANFILES = \
+	$(desktop_DATA) \
+	intltool-extract \
+	intltool-merge \
+	intltool-update \
+	intltool-update-tmp
 
-DISTCHECK_CONFIGURE_FLAGS =						\
+DISTCHECK_CONFIGURE_FLAGS = \
 	--enable-gtk-doc
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
