Update POTFILES.in and add a POTFILES.skip for make dist.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,24 +1,36 @@
+libxfce4panel/xfce-arrow-button.c
+libxfce4panel/xfce-panel-macros.h
+libxfce4panel/xfce-panel-plugin-provider.c
+libxfce4panel/xfce-panel-plugin.c
 panel/main.c
 panel/panel-application.c
-panel/panel-application.h
-panel/panel-dbus-infos.xml
-panel/panel-dbus.c
-panel/panel-dbus.h
+panel/panel-dbus-service.c
 panel/panel-dialogs.c
-panel/panel-dialogs.h
 panel/panel-item-dialog.c
-panel/panel-item-dialog.h
-panel/panel-itembar.c
-panel/panel-itembar.h
 panel/panel-module-factory.c
-panel/panel-module-factory.h
-panel/panel-module.c
-panel/panel-module.h
 panel/panel-plugin-external.c
-panel/panel-plugin-external.h
-panel/panel-preferences-dialog.c
-panel/panel-preferences-dialog.h
-panel/panel-private.c
-panel/panel-private.h
 panel/panel-window.c
-panel/panel-window.h
+plugins/clock/clock-fuzzy.c
+plugins/launcher/launcher.c
+plugins/showdesktop/showdesktop.c
+plugins/systray/xfce-tray-dialogs.c
+plugins/systray/xfce-tray-manager.c
+plugins/systray/xfce-tray-plugin.c
+plugins/systray/xfce-tray-widget.c
+wrapper/main.c
+
+panel-desktop-handler.desktop.in
+panel-preferences.desktop.in
+plugins/clock/clock.desktop.in.in
+plugins/launcher/launcher.desktop.in.in
+plugins/pager/pager.desktop.in.in
+plugins/separator/separator.desktop.in.in
+plugins/showdesktop/showdesktop.desktop.in.in
+plugins/systray/systray.desktop.in.in
+plugins/tasklist/tasklist.desktop.in.in
+
+panel/panel-preferences-dialog.glade
+plugins/launcher/launcher-dialog.glade
+plugins/clock/clock-dialog.glade
+plugins/separator/separator-dialog.glade
+plugins/tasklist/tasklist-dialog.glade
